adding frontedn navbar routing

--- a/FrontEnd/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,9 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-light bg-light">
   <a class="navbar-brand">Navbar</a>
-  <a class="navbar-brand" href="#">Login</a>
+
+<div >
+    <a class="navbar-brand" href="login">Login</a>
+    <a class="navbar-brand" href="profile">Profile</a>
+</div>
 
 </nav>
