--- a/FrontEnd/src/app/components/signup/signup.component.html
+++ b/FrontEnd/src/app/components/signup/signup.component.html
@@ -1,3 +1,51 @@
-<p>
-  signup works!
-</p>
+<div class="mt-4 col-8 offset-2">
+    <div class="card">
+      <div class="card-header">
+          Sign
+      </div>
+      <div class="card-body">
+        <form #signupForm=ngForm (ngSubmit)="onSubmit()">
+          <div class="form-group row">
+              <label for="name" class="col-sm-2 col-form-label">Name</label>
+              <div class="col-sm-10">
+                <input type="text" name="name" class="form-control" id="name" [(ngModel)]= "form.name" placeholder="name" required>
+
+              </div>
+            </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" name="email" class="form-control" id="inputEmail3" [(ngModel)]= "form.email" placeholder="Email" required>
+              <div class="alert alert-danger" [hidden]="!error.email">
+                  {{error.email}}
+                </div>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" name="password" class="form-control" [(ngModel)]= "form.password" id="inputPassword3" placeholder="Password" required>
+              <div class="alert alert-danger" [hidden]="!error.password">
+                  {{error.password}}
+                </div>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="password_confirmation" class="col-sm-2 col-form-label">confirm password</label>
+            <div class="col-sm-10">
+              <input type="password" name="password_confirmation" class="form-control" [(ngModel)]= "form.password_confirmation" id="password" placeholder="password" required>
+            </div>
+          </div>
+
+          <div class="form-group row">
+              <div class="col-sm-10 offset-2">
+                <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Sign up</button>
+                <a routerLink="/login" class="btn btn-info float-right">Log In</a>
+              </div>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
