--- a/FrontEnd/src/app/components/password/response-reset/response-reset.component.html
+++ b/FrontEnd/src/app/components/password/response-reset/response-reset.component.html
@@ -1,3 +1,43 @@
-<p>
-  response-reset works!
-</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">
+        Reset password
+    </div>
+    <div class="card-body">
+      <form #ResetPasswordForm=ngForm (ngSubmit)="onSubmit()">
+
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" name="email" class="form-control" id="inputEmail3" [value]="form.email" placeholder="Email" required>
+          <span class="text-danger" [hidden]="!error.email">{{error.email}}</span>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" name="password" class="form-control" [(ngModel)]= "form.password" id="inputPassword3" placeholder="Password" required>
+            <span class="text-danger" [hidden]="!error.password">{{error.password}}</span>
+
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="confirm_password" class="col-sm-2 col-form-label">confirm password</label>
+          <div class="col-sm-10">
+            <input type="password" name="confirm_password" class="form-control" [(ngModel)]= "form.password_confirmation" id="confirm_password" placeholder="confirm_password" required>
+            <span class="text-danger" [hidden]="!error.password_confirmation">{{error.password_confirmation}}</span>
+
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm-10 offset-2">
+            <button type="submit" class="btn btn-primary" [disabled]="!ResetPasswordForm.valid">Change password</button>
+
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
